--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,12 @@
 
 #input {
   text-align: end;
+  overflow: none;
   width: 100%;
   border-radius: 2rem;
   padding: 2rem 2.75rem;
   color: rgb(255, 255, 255);
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: "Inter", sans-serif;
   border: none;
   text-decoration: none;
@@ -70,10 +71,22 @@
 }
 
 .colspan-2 {
-  grid-column: 1/3;
   border-radius: 2rem;
   text-align: end;
   padding-right: 1.2rem;
+}
+
+#button0 {
+  grid-column: 1/3;
+}
+
+#buttonEquals {
+  grid-column: 3/5;
+  background-color: rgb(253, 37, 37);
+}
+#buttonEquals:hover {
+  grid-column: 3/5;
+  background-color: rgb(88, 96, 61);
 }
 
 .top-row {
