--- a/style.css
+++ b/style.css
@@ -2,5 +2,16 @@
     height: 420px;
     width: 300px;
     background-color: gray;
+    border: 1px solid black;
     border-radius: 5px;
+}
+
+#app form {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+}
+
+#app input[type="textfield"] {
+    width: 100%;
 }
