--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 :root {
     --clr-primary: rgba(170, 170, 170, 0.7);
+    --clr-secondary: rgb(170, 170, 170);
+    --clr-light: rgb(235, 235, 235);
+    --clr-accent: rgb(200, 200, 200);
+    --clr-error: rgb(200, 40, 40);
 }
 
 body{
@@ -8,30 +12,40 @@ body{
     justify-content: center;
     margin: 3rem .5rem;
     font-family: 'Exo 2', sans-serif;
+    font-size: 2em;
 }
 
 .calculator {
     background-color: var(--clr-primary);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
     gap: .5rem;
-    max-width: 200px;
+    max-height: 700px;
+    height: 90%;
+    max-width: 400px;
     width: 90%;
     padding: 1rem;
     border-radius: .5rem;
     box-shadow: 10px 10px 10px 0px gray;
+    border: 2px solid var(--clr-secondary);
 }
 
 .screen {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: .5rem;
     grid-column: 1/-1;
     background-color: white;
-    border: 2px solid var(--clr-primary);
-    border-radius: .25rem;
+    border: 2px solid var(--clr-secondary);
+    border-radius: .5rem;
     text-align: right;
-    padding: .5rem;
+    padding: .5rem 1rem;
+}
+.screen.error {
+    border: 2px solid var(--clr-error);
 }
 
 .screen > * {
@@ -39,7 +53,31 @@ body{
     outline: none;
     text-align: right;
 }
+.screen.error > * {
+    color: var(--clr-error);
+}
 
 .result {
     font-weight: 700;
+    font-size: 1.5em;
+}
+
+.operations {
+    font-size: 1em;
+}
+
+.button {
+    background-color: var(--clr-light);
+    border-radius: 50%;
+    aspect-ratio: 1;
+    border: 2px solid var(--clr-secondary);
+    font-size: 1em;
+    cursor: pointer;
+}
+.button:hover {
+    background-color: var(--clr-accent);
+}
+.button.down {
+    color: var(--clr-light);
+    border: 5px solid var(--clr-light);
 }
