--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-  width: 90%;
-  height: 50vmax;
-}
-
 #calculator {
   display: flex;
   justify-content: start;
@@ -10,14 +5,16 @@ body {
   flex-direction: column;
   background-color: #0a9152;
   border-radius: 1rem;
-  height: 90vmax;
+  height: 800px;
+  width: 500px;
   padding: 1rem;
 }
 
-.display {
+#display {
   background-color: #424242;
   color: #FFFFFF;
   width: 90%;
+  height: 200px;
   margin: 1rem;
   padding: 1rem;
   border-radius: 1rem;
@@ -27,37 +24,31 @@ body {
 
 }
 
-#result {
-  height: 50%;
+#result, #operation {
+  height: 100px;
   margin: 1rem;
-  font-size: 5vw;
-}
-
-#operation {
-  height: 50%;
-  margin: 1rem;
-  font-size: 5vw;
+  font-size: 60px;
 }
 
 .buttons-container {
   display: grid;
   width: 100%;
-  height: 90vh;
   margin: 1rem;
-  grid-template-columns: 20% 20% 20% 20%;
-  grid-template-rows: auto;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   grid-template-areas: 
-    "reset reset backspace division"
+    "clear clear backspace division"
     "number7 number8 number9 multiplication"
     "number4 number5 number6 minus"
     "number1 number2 number3 plus"
     "number0 number0 period equal";
     place-content: center;
+    justify-items: center;
     grid-gap: 1rem;
 }
 
-#reset {
-  grid-area: reset;
+#clear {
+  grid-area: clear;
 }
 
 #backspace {
@@ -123,7 +114,13 @@ body {
 button {
   border-radius: 50%;
   height: 4rem;
-  font-size: 4vmax;
+  width: 4rem;
+  font-size: 40px;
+}
+
+.doubleBtn {
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .operationBtn {
