--- a/style.css
+++ b/style.css
@@ -24,10 +24,16 @@
 
 }
 
-#result, #operation {
-  height: 100px;
+#result {
+  height: 130px;
   margin: 1rem;
   font-size: 60px;
+}
+
+#operation {
+  height: 70px;
+  margin: 1rem;
+  font-size: 40px;
 }
 
 .buttons-container {
@@ -130,4 +136,9 @@ button {
 
 .numberBtn {
   background-color: #0a9152;
+}
+
+#clear, #equal {
+  background-color: #89fac5;
+  font-weight: bold;
 }
