--- a/index.css
+++ b/index.css
@@ -24,8 +24,10 @@ body {
 
 /* Estilos de la pantalla */
 .pantalla {
-    background-color: #eee;
-    border: 1px solid #ccc;
+    font-family: 'Orbitron', sans-serif;
+    background-color: black;
+    color: white;
+    border: 1px solid black;
     padding: 10px;
     margin-bottom: 10px;
     display: flex;
