--- a/estilos.css
+++ b/estilos.css
@@ -14,12 +14,16 @@ body {
     display: grid;
     grid-template-rows: auto 1fr; 
     gap: 20px;
-    border: 5px solid lime;
+    border: 5px solid #ccc;
+    border-bottom: 20px solid #aaa;
+    border-right: 20px solid #aaa;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    
     border-radius: 25px;
     padding: 20px;
     background-color: grey;
     height: 70%;
-    box-shadow: 20px 20px 10px rgb(0, 0, 0); /* Efecto de sombra */
+    box-shadow: 20px 20px 10px rgb(0, 0, 0);
 
 
   }
@@ -27,13 +31,17 @@ body {
     width: 95%;
     height: 125px;
     border-radius: 25px;
-    border: 5px solid lime;
+    border: 5px solid black;
     background-color: lightgreen;
     font-size: 40px;
     color: red;
     direction: rtl;
     outline: none;
     caret-color: transparent;
+    border-top: 10px solid black;
+    border-left: 10px solid black;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+
   }
 
 
@@ -54,8 +62,10 @@ body {
     height: 100px;
     font-size: 25px;
     border: 5px solid black;
-    border-radius: 20px;
-    box-shadow: 10px 10px 10px rgb(0, 0, 0); /* Efecto de sombra */
+    border-radius: 10px;
+    border-bottom: 10px solid black;
+    border-right: 10px solid black;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     
 }
 .numero button{
